--- a/src/app/autosave/autosave.component.html
+++ b/src/app/autosave/autosave.component.html
@@ -39,6 +39,7 @@
     </div>
     <div class="col-12">
       <button type="button" [disabled]="formGroup.invalid">Next section</button>
+      {{ savingStatus }}
     </div>
   </div>
 </form>
