--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<a class="link" routerLink="/basic">Basic</a>
+<!-- <a class="link" routerLink="/basic">Basic</a> -->
 <a class="link" routerLink="/autosave">Autosave</a>
-<a class="link" routerLink="/async">Async</a>
+<!-- <a class="link" routerLink="/async">Async</a> -->
 
 <router-outlet></router-outlet>
