--- a/src/app/autosave/autosave.component.html
+++ b/src/app/autosave/autosave.component.html
@@ -38,7 +38,7 @@
       />
     </div>
     <div class="col-12">
-      <button type="button" [disabled]="formGroup.invalid">Next section</button>
+      <!-- <button type="button" [disabled]="formGroup.invalid">Next section</button> -->
       {{ savingStatus }}
     </div>
   </div>
